--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
@@ -18,9 +15,13 @@
     "card-validator": "^8.1.1",
     "formik": "^2.2.6",
     "jarallax": "^1.12.8",
+    "next": "12.1.6",
+    "react": "18.1.0",
     "react-countup": "^6.1.0",
+    "react-dom": "18.1.0",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-mui-notify": "^0.0.8",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-syntax-highlighter": "^15.4.5",
@@ -31,15 +32,12 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.33",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4",
     "@types/aos": "^3.0.4",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
+    "@types/node": "17.0.33",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -47,6 +45,8 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "cross-env": "^7.0.2",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -57,7 +57,8 @@
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "4.6.4"
   },
   "scripts": {
     "dev": "next dev",
