--- a/.github/workflows/1_dev_tests.yml
+++ b/.github/workflows/1_dev_tests.yml
@@ -3,6 +3,7 @@ name: DevTests
 on:
   push:
     branches: [dev]
+    
   pull_request:
     branches: [dev]
 
@@ -16,17 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        name: Test with Node.js ${{ matrix.node-version }}
+
+      - name: Test with Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: "app/package-lock.json"
 
-      - run: |
-          npm install
-        working-directory: ./app
+      - run: npm test
 
-      - run: |
-          npm test
-        working-directory: ./app
