Added install command to dev test workflow

--- a/.github/workflows/1_dev_tests.yml
+++ b/.github/workflows/1_dev_tests.yml
@@ -3,7 +3,7 @@ name: DevTests
 on:
   push:
     branches: [dev]
-    
+
   pull_request:
     branches: [dev]
 
@@ -24,5 +24,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
+      - run: run npm install
       - run: npm test
 
