--- a/.github/workflows/1_dev_tests.yml
+++ b/.github/workflows/1_dev_tests.yml
@@ -24,6 +24,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - run: run npm install
-      - run: npm test
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Tests
+        run: npm test
 
