--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest",
     "test:ci": "jest --ci",
     "eject": "react-scripts eject"
   },
