--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@octokit/core": "^3.6.0",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
+    "extracted-loader": "^1.0.7",
+    "file-loader": "^6.2.0",
     "formik": "^2.2.6",
+    "ignore-loader": "^0.1.2",
+    "imagemin-svgo": "^10.0.1",
+    "img-loader": "^4.0.0",
     "jarallax": "^1.12.8",
     "next": "12.1.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "18.1.0",
     "react-countup": "^6.1.0",
     "react-dom": "18.1.0",
@@ -21,6 +28,7 @@
     "react-syntax-highlighter": "^15.4.5",
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
@@ -28,8 +36,6 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
     "@types/aos": "^3.0.4",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
@@ -50,6 +56,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.0",
@@ -58,7 +66,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
