--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "path": "^0.12.7",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "dev": "next dev",
@@ -71,7 +74,9 @@
     "lint": "next lint",
     "test": "jest",
     "test:ci": "jest --ci",
-    "eject": "react-scripts eject"
+    "build-lambda": "webpack --config webpack.config.js --mode production",
+    "deploy": "aws s3 cp --recursive build/ $BUCKET",
+    "invalidate": "aws cloudfront create-invalidation --distribution-id $DISTID --paths \"/*\""
   },
   "eslintConfig": {
     "extends": [
