Remove origin lambda from infrastructure

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "deploy": "aws s3 cp build/ s3://$MAIN_S3_BUCKET_ID/ --recursive",
     "invalidate": "aws cloudfront create-invalidation --distribution-id $MAIN_CLOUDFRONT_DISTRIBUTION_ID --paths \"/*\"",
     "deploy:local": "dotenv cross-var aws s3 cp build/ s3://%MAIN_S3_BUCKET_ID%/ --recursive",
-    "invalidate:local": "cross-env aws cloudfront create-invalidation --distribution-id $MAIN_CLOUDFRONT_DISTRIBUTION_ID --paths \"/*\""
+    "invalidate:local": "dotenv cross-var aws cloudfront create-invalidation --distribution-id $MAIN_CLOUDFRONT_DISTRIBUTION_ID --paths \"/*\""
   },
   "eslintConfig": {
     "extends": [
