--- a/package.json
+++ b/package.json
@@ -4,30 +4,35 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@octokit/core": "^3.6.0",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
-    "extracted-loader": "^1.0.7",
-    "file-loader": "^6.2.0",
     "formik": "^2.2.6",
+    "gatsby": "^4.14.1",
+    "gatsby-plugin-google-analytics": "^4.14.0",
+    "gatsby-plugin-image": "^2.14.1",
+    "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-mdx": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-sharp": "^4.14.0",
     "ignore-loader": "^0.1.2",
-    "img-loader": "^4.0.0",
     "jarallax": "^1.12.8",
-    "next": "12.1.6",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
     "react": "18.1.0",
     "react-countup": "^6.1.0",
     "react-dom": "18.1.0",
+    "react-helmet": "^6.1.0",
     "react-mui-notify": "^0.0.8",
-    "react-slick": "^0.28.1",
-    "react-syntax-highlighter": "^15.4.5",
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
-    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
@@ -43,10 +48,7 @@
     "@types/react-dom": "18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -54,24 +56,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "path": "^0.12.7",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "4.6.4",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "typescript": "4.6.4"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export -o build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:ci": "jest --ci",
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit",
     "deploy": "bash scripts/deploy.sh",
     "deploy:staging": "bash scripts/staging-deploy.sh"
   },
