--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
     "@octokit/core": "^3.6.0",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
@@ -26,20 +26,16 @@
     "gatsby-transformer-sharp": "^4.14.0",
     "ignore-loader": "^0.1.2",
     "jarallax": "^1.12.8",
-    "react": "18.1.0",
+    "react": "^17.0.1",
     "react-countup": "^6.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-mui-notify": "^0.0.8",
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
     "@types/aos": "^3.0.4",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
