--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "./src/**/*",
     "./gatsby-node.ts",
     "./gatsby-config.ts",
-    "./plugins/**/*"
+    "./plugins/**/*",
+    "./src/const"
   ],
   "exclude": ["node_modules"]
 }
