--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-manifest": "^4.14.0",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-root-import": "^2.0.8",
     "gatsby-plugin-sharp": "^4.14.1",
     "gatsby-plugin-sitemap": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
