--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@octokit/core": "^3.6.0",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
+    "deepmerge": "^4.2.2",
     "formik": "^2.2.6",
     "gatsby": "^4.14.1",
     "gatsby-plugin-google-analytics": "^4.14.0",
