--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
-  "trailingComma": "all",
+  "trailingComma": "none",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
   "bracketSpacing": true,
   "arrowParens": "always"
 }
