--- a/package.json
+++ b/package.json
@@ -1,85 +1,47 @@
 {
-  "name": "pierredutoit.me",
-  "version": "0.1.0",
+  "name": "gatsby-material-ui-starter",
+  "version": "1.0.0",
   "private": true,
+  "description": "gatsby-material-ui-starter",
+  "author": "Pierre du Toit",
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit"
+  },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
-    "@octokit/core": "^3.6.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^14.0.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
+    "@octokit/core": "^4.2.0",
     "aos": "^2.3.4",
-    "card-validator": "^8.1.1",
-    "formik": "^2.2.6",
-    "jarallax": "^1.12.8",
-    "react": "^17.0.1",
-    "react-countup": "^6.1.0",
-    "react-dom": "^17.0.1",
-    "react-image-lightbox": "^5.1.4",
-    "react-lazy-load-image-component": "^1.5.1",
-    "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0",
-    "react-slick": "^0.28.1",
-    "react-syntax-highlighter": "^15.4.5",
+    "formik": "^2.2.9",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-emotion": "^8.9.0",
+    "gatsby-plugin-google-gtag": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-typed": "^1.2.0",
-    "react-visibility-sensor": "^5.1.1",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.2",
-    "yup": "^0.32.11"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4",
-    "@types/jest": "^27.4.1",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.0",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-lazy-load-image-component": "^1.5.2",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^2.0.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^8.4.1",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1",
-    "prettier-eslint": "^13.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "gatsby-plugin-root-import": "^2.0.9",
+    "typescript": "^5.0.4"
   }
 }
