Completed initial updates to gatsby

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-REACT_APP_GIT_AUTH_TOKEN=somesupersecretauthtoken
+GIT_AUTH_TOKEN=somesupersecretauthtoken
+NODE_ENV=development
+CONTACT_URL=http://contact-api-endpoint.example/contact-api
+GITHUB_USERNAME=username
