update github auth

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
-    "@octokit/core": "^4.2.0",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "gatsby": "^5.9.0",
@@ -31,7 +30,9 @@
     "gatsby-plugin-sharp": "^5.9.0",
     "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
+    "octokit": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-typed": "^1.2.0",
